--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "vue-animate-onscroll": "^1.0.7",
     "vuelidate": "^0.7.4"
   },
   "devDependencies": {
